[package]
name = "envar"
version = "0.1.0"
edition = "2021"
description = "A simple macro to read environment variables at compile time"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "1.0", features = ["full"] }
